--- a/css/style.css
+++ b/css/style.css
@@ -43,7 +43,7 @@ body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   /*font-size: 16px;*/
-  /*font-size: 1.6rem;*/
+  /*font-size: $default-font-size;*/
   line-height: 1.7;
   color: #777;
   padding: 3rem; }
@@ -149,6 +149,25 @@ body {
 .btn--animated {
   animation: moveInBottom .5s ease-out .75s;
   animation-fill-mode: backwards; }
+
+.btn-text:link, .btn-text:visited {
+  font-size: 1.6rem;
+  color: #55c57a;
+  display: inline-block;
+  text-decoration: none;
+  border-bottom: 1px solid #55c57a;
+  padding: 3px;
+  transition: all .2s; }
+
+.btn-text:hover {
+  background-color: #55c57a;
+  color: #FFF;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.15);
+  transform: translateY(-2px); }
+
+.btn-text:active {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  transform: translateY(0); }
 
 .row {
   max-width: 114rem;
