--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,6 +34,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &::after {
     content: "";
     display: inline-block;
@@ -65,14 +74,14 @@
     transition: all .2s;
   }
 
-  &:hover{
+  &:hover {
     background-color: $color-primary;
     color: $color-white;
     box-shadow: 0 1rem 2rem rgba($color-black, .15);
     transform: translateY(-2px);
   }
 
-  &:active{
+  &:active {
     box-shadow: 0 .5rem 1rem rgba($color-black, .15);
     transform: translateY(0);
   }
