--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -54,6 +54,8 @@
     background-blend-mode: screen;
     clip-path: polygon(0 0, 0 100%, 100% 85%, 100% 0);
     -webkit-clip-path: polygon(0 0, 0 100%, 100% 85%, 100% 0);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
 
     &--1 {
       background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark), url("../img/nat-5.jpg");
