--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,8 +14,12 @@
 @import "components/feature-box";
 @import "components/form";
 @import "components/story";
+@import "components/popup";
 
 @import "layout/grid";
 @import "layout/header";
+@import "layout/footer";
+@import "layout/navigation";
+
 
 @import "pages/home";
